@@ -1,16 +1,21 @@
 package es.upm.miw.apaw.adapters.mongodb.vehicle.persistence;
 
 import es.upm.miw.apaw.adapters.mongodb.vehicle.daos.VehicleSeeder;
+import es.upm.miw.apaw.domain.models.UserDto;
 import es.upm.miw.apaw.domain.models.vehicle.Vehicle;
+import es.upm.miw.apaw.domain.restclients.UserRestClient;
 import org.junit.jupiter.api.Test;
+import org.mockito.BDDMockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -22,12 +27,15 @@ class VehiclePersistenceMongodbIT {
     @Autowired
     private VehicleSeeder vehicleSeeder;
 
+    @MockitoBean
+    private UserRestClient userRestClient;
+
     @Test
     void testReadByBrand() {
-        List<Vehicle> vehicles = this.vehiclePersistenceMongodb.readByBrand("Peugeot").collect(Collectors.toList());
+        List<Vehicle> vehicles = this.vehiclePersistenceMongodb.readByBrand("Peugeot").toList();
 
-        assertThat(vehicles).isNotEmpty();
         assertThat(vehicles)
+                .isNotEmpty()
                 .allSatisfy(vehicle -> {
                     assertThat(vehicle.getBrand()).isEqualTo("Peugeot");
                     assertThat(vehicle.getPlate()).startsWith("000");
@@ -38,7 +46,7 @@ class VehiclePersistenceMongodbIT {
 
     @Test
     void testReadByBrand_NoResults() {
-        List<Vehicle> vehicles = this.vehiclePersistenceMongodb.readByBrand("Ferrari").collect(Collectors.toList());
+        List<Vehicle> vehicles = this.vehiclePersistenceMongodb.readByBrand("Ferrari").toList();
         assertThat(vehicles).isEmpty();
     }
 
@@ -47,7 +55,7 @@ class VehiclePersistenceMongodbIT {
         vehicleSeeder.deleteAll();
         vehicleSeeder.seedDatabase();
 
-        List<Vehicle> vehicles = this.vehiclePersistenceMongodb.readByBrand("Honda").collect(Collectors.toList());
+        List<Vehicle> vehicles = this.vehiclePersistenceMongodb.readByBrand("Honda").toList();
         assertThat(vehicles).isNotEmpty();
     }
 
@@ -68,20 +76,18 @@ class VehiclePersistenceMongodbIT {
                 .doesNotHaveDuplicates();
     }
 
-    // @Test
+    @Test
     void testFindUserMobilesByEngineType() {
+        // It is important to simulate userRestClient.
+        // The first test I did was with apaw-user running on local and they executed successfully, but GitHub Actions cannot access the apaw-user URL.
+        BDDMockito.given(this.userRestClient.readById(any(UUID.class)))
+                .willAnswer(invocation ->
+                    UserDto.builder().id(invocation.getArgument(0)).mobile("123456789").firstName("mock").build());
+
         List<String> mobiles = this.vehiclePersistenceMongodb.findUserMobilesByEngineType("Diesel");
-
         assertThat(mobiles)
-                .isNotNull()
-                .containsExactly("666000660", "666000661")
-                .doesNotHaveDuplicates();
-
-        List<String> mobiles2 = this.vehiclePersistenceMongodb.findUserMobilesByEngineType("Gasolina");
-
-        assertThat(mobiles2)
-                .isNotNull()
-                .containsExactly("666000662", "666000663", "666000664", "666666005")
+                .isNotEmpty()
+                .containsExactly("123456789")
                 .doesNotHaveDuplicates();
     }
 }
